--- a/markdown/component-definitions/My-Test-Component/My-Test-Component/rhel10-anssi-enhanced/r1/r1.md
+++ b/markdown/component-definitions/My-Test-Component/My-Test-Component/rhel10-anssi-enhanced/r1/r1.md
@@ -10,11 +10,11 @@ x-trestle-global:
   sort-id: r1
 ---
 
-# r1 - \[REPLACE_ME\] Hardware Support
+## r1 - If you can't be a hardware, be a hardware supporter
 
-## Control Statement
+### Control Statement
 
-It is recommended to apply the configuration recommendations for Hardware support mentioned in ANSSI DAT-24.
+It is recommended to apply Head-On directly to head.
 
 ______________________________________________________________________
 
@@ -28,8 +28,8 @@ ______________________________________________________________________
 
 ### Rules:
 
-  - rule-r1
+  - where we're going, we don't need rules.
 
-### Implementation Status: planned
+### Implementation Status: alternative
 
 ______________________________________________________________________
