--- a/markdown/component-definitions/My-Test-Component/My-Test-Component/rhel10-anssi-enhanced/r12/r12.md
+++ b/markdown/component-definitions/My-Test-Component/My-Test-Component/rhel10-anssi-enhanced/r12/r12.md
@@ -14,6 +14,7 @@ x-trestle-global:
 
 ## Control Statement
 
+Man is condemned to be free; because once thrown into the world, he is responsible for everything he does.
 ______________________________________________________________________
 
 ## What is the solution and how is it implemented?
@@ -28,6 +29,6 @@ ______________________________________________________________________
 
   - rule-r12
 
-### Implementation Status: planned
+### Implementation Status: partial
 
 ______________________________________________________________________
