--- a/markdown/component-definitions/My-Test-Component/My-Test-Component/rhel10-anssi-enhanced/r52/r52.md
+++ b/markdown/component-definitions/My-Test-Component/My-Test-Component/rhel10-anssi-enhanced/r52/r52.md
@@ -10,13 +10,13 @@ x-trestle-global:
   sort-id: r52
 ---
 
-# r52 - \[REPLACE_ME\] Securing Access For Named Sockets And Pipes
+# r52 - Lies and the lying liars that tell them
 
 ## Control Statement
 
 ______________________________________________________________________
 
-## What is the solution and how is it implemented?
+# What is the solution and how is it implemented?
 
 <!-- For implementation status enter one of: implemented, partial, planned, alternative, not-applicable -->
 
@@ -28,6 +28,6 @@ ______________________________________________________________________
 
   - rule-r52
 
-### Implementation Status: planned
+### Implementation Status: not-applicable
 
 ______________________________________________________________________
